--- a/LaTeX/Studienarbeit.tex
+++ b/LaTeX/Studienarbeit.tex
@@ -111,11 +111,11 @@
           \draw[->] (pfr) -- (outlet);
         \label{fig:rom_mechanismusvergleich}
         \end{tikzpicture}
-        \subsection{Simulation ohne CO$_2$}
-        Über die Länge der Nachbrennzone lassen sich die Stoffmengenanteile aufteilen. In Abbildung \ref{fig:vergleich_h2_ch4_keinco2} sind beispielsweise die Stoffmengenanteile von Wasserstoff und Methan dargestellt.
+        \subsection{Simulation ohne CO \textunderscore 2}
+        Über die Länge der Nachbrennzone lassen sich die Stoffmengenanteile aufteilen. In Abbildung~\ref{fig:vergleich_h2_ch4_keinco2} sind beispielsweise die Stoffmengenanteile von Wasserstoff und Methan dargestellt.
         \begin{figure}[H]
             \centering
-            \includegraphics[width=1\linewidth]{img/Vergleich_mech/CO_CO2_keinCO2.png}
+            \includegraphics[width=0.9\linewidth]{img_py/H2_CH4_CO_CO2_keinCO2.png}
             \caption{Darstellung der Stoffmengenanteile Wasserstoff und Methan für die Simulation ohne CO$_2$}
             \label{fig:vergleich_h2_ch4_keinco2}
         \end{figure}
@@ -140,7 +140,7 @@
         Analog zur Simulation ohne CO$_2$ werden die Stoffe über die Länge der Nachbrennzone analysiert (siehe Abbildung \ref{fig:vergleich_h2_ch4_co2}).
         \begin{figure}[H]
             \centering
-            \includegraphics[width=1\linewidth]{img/Vergleich_mech/CO_CO2_CO2.png}
+            \includegraphics[width=0.8\linewidth]{img_py/H2_CH4_CO_CO2.png}
             \caption{Darstellung der Stoffmengenanteile Wasserstoff und Methan für die Simulation mit CO$_2$}
             \label{fig:vergleich_h2_ch4_co2}
         \end{figure}
