--- a/LaTeX/refs.bib
+++ b/LaTeX/refs.bib
@@ -1,71 +1,40 @@
-@book{Bishop2006,
-    title = {Pattern {{Recognition}} and {{Machine Learning}}},
-    author = {Bishop, Christopher M.},
-    date = {2006},
-    publisher = {{Springer Science and Business Media, LLC}},
-    location = {New York, NY, USA},
-    isbn = {978-0-387-31073-2},
-    pagetotal = {738}
+@online{Gri-Mech,
+    author = {Gregory P. Smith and others},
+    title = {Gri-Mech},
+    url = {http://www.me.berkeley.edu/gri_mech/},
+    date = {2025-06-19},
 }
 
-@inproceedings{Gunther2019,
-    title = {Increased Safety in Deep Mining with {{IoT}} and Autonomous Robots},
-    booktitle = {{{APCOM}} 2019: {{Mining Goes Digital}}},
-    author = {Günther, Franziska and Mischo, Helmut and Lösch, Robert and Grehl, Steve and Güth, Frederic},
-    editor = {{Mueller}},
-    date = {2019},
-    pages = {603--611},
-    publisher = {2019 Taylor \& Francis Group},
-    location = {Wroclaw, Poland},
-    isbn = {978-0-367-33604-2}
+@online{Aramco20,
+    author = {{University of Galway}},
+    title = {AramcoMech 2.0},
+    url = {https://www.universityofgalway.ie/combustionchemistrycentre/mechanismdownloads/aramcomech20/},
+    date = {2025-06-19},
 }
 
-@inproceedings{Guth2018,
-    title = {Autonomous {{Robots}} and the {{Internet}} of {{Things}} in {{Underground Mining}}},
-    booktitle = {Conference on {{Smart Systems Integration}}},
-    author = {Güth, Frederic and Wolf, Franziska and Grehl, Steve and Lösch, Robert and Varga, Sebastian and Rezaei, Nasrin and Mischo, Helmut and Jung, Bernhard and Benndorf, Jörg and Rehkopf, Andreas and Joseph, Yvonne},
-    date = {2018},
-    pages = {215--222},
-    location = {Dresden},
-    issue = {April}
+@article{MARTINEZ2021401,
+title = {An experimental and kinetic modeling study of the ignition delay characteristics of binary blends of ethane/propane and ethylene/propane in multiple shock tubes and rapid compression machines over a wide range of temperature, pressure, equivalence ratio, and dilution},
+journal = {Combustion and Flame},
+volume = {228},
+pages = {401-414},
+year = {2021},
+issn = {0010-2180},
+doi = {https://doi.org/10.1016/j.combustflame.2021.02.009},
+url = {https://www.sciencedirect.com/science/article/pii/S0010218021000729},
+author = {Sergio Martinez and Mohammadreza Baigmohammadi and Vaibhav Patel and Snehasish Panigrahy and Amrit B. Sahu and Shashank S. Nagaraja and Ajoy Ramalingam and A. Abd El-Sabor Mohamed and Kieran P. Somers and Karl A. Heufer and Andrzej Pekalski and Henry J. Curran},
+keywords = {Ethane, Ethylene, Propane, Shock-tube, Rapid compression machine, Ignition delay time},
+abstract = {In this work, the ignition delay time characteristics of C2 – C3 binary blends of gaseous hydrocarbons including ethylene/propane and ethane/propane are studied over a wide range of temperatures (750 – 2000 K), pressures (1 – 135 bar), equivalence ratios (φ = 0.5 – 2.0) and dilutions (75 – 90%). A matrix of experimental conditions is generated using the Taguchi (L9) approach to cover the range of conditions for the validation of a chemical kinetic model. The experimental ignition delay time data are recorded using low- and high-pressure shock tubes and two rapid compression machines (RCM) to include all of the designed conditions. These novel experiments provide a direct validation of the chemical kinetic model, NUIGMech1.1, and its performance is characterized via statistical analysis, with the agreement between experiments and model being within ~ 26.4% over all of the conditions studied, which is comparable with a general absolute uncertainty of the applied facilities (~ 20%). Sensitivity and flux analyses allow for the key reactions controlling the ignition behavior of the blends to be identified. Subsequent analyses are performed to identify those reactions which are important for the pure fuel components and for the blended fuels, and synergistic/antagonistic blending effects are therefore identified over the wide range of conditions. The overall performance of NUIGMech1.1 and the correlations generated are in good agreement with the experimental data.}
 }
 
-@article{Losch2018,
-    title = {Roboter und Internet der Dinge zur Umgebungsdatenerfassung unter Tage},
-    author = {Lösch, Robert and Grehl, Steve and Güth, Frederic and Günther, Franziska and Rezaei-Abadchi, Nasrin and Jung, Bernhard},
-    date = {2018},
-    journaltitle = {Acamonta - Zeitschrift der Freunde und Förderer der Technischen Universität Bergakademie Freiberg},
-    volume = {25},
-    number = {1},
-    pages = {41--45}
-}
+@phdthesis{POX_Erdgas,
+title = "Partial oxidation of methane to synthesis gas : reaction kinetics and reactor modelling",
+author = "{Smet, de}, C.R.H.",
+year = "2000",
+doi = "10.6100/IR535178",
+language = "English",
+isbn = "90-386-2921-4",
+publisher = "Technische Universiteit Eindhoven",
+type = "Phd Thesis 1 (Research TU/e / Graduation TU/e)",
+school = "Chemical Engineering and Chemistry",
 
-@inproceedings{Lösch2018a,
-    title = {Design of an {{Autonomous Robot}} for {{Mapping}}, {{Navigation}}, and {{Manipulation}} in {{Underground Mines}}},
-    booktitle = {2018 {{IEEE}}/{{RSJ International Conference}} on {{Intelligent Robots}} and {{Systems}} ({{IROS}})},
-    author = {Lösch, Robert and Grehl, Steve and Donner, Marc and Buhl, Claudia and Jung, Bernhard},
-    date = {2018},
-    pages = {1407--1412},
-    publisher = {IEEE},
-    location = {Madrid, Spain},
-    issn = {2153-0866},
-    doi = {10.1109/IROS.2018.8594190},
-    url = {https://ieeexplore.ieee.org/document/8594190},
-    isbn = {978-1-5386-8093-3},
-    keywords = {Cameras,Manipulators,Mobile robots,Navigation,Robot sensing systems}
-}
-
-@inproceedings{Losch2023,
-    title = {Converting {{Depth Images}} and {{Point Clouds}} for {{Feature-Based Pose Estimation}}},
-    booktitle = {2023 {{IEEE}}/{{RSJ International Conference}} on {{Intelligent Robots}} and {{Systems}} ({{IROS}})},
-    author = {Lösch, Robert and Sastuba, Mark and Toth, Jonas and Jung, Bernhard},
-    date = {2023-10},
-    pages = {3422--3428},
-    publisher = {IEEE},
-    location = {Detroit, MI, USA},
-    doi = {10.1109/IROS55552.2023.10341758},
-    url = {https://ieeexplore.ieee.org/document/10341758/},
-    urldate = {2023-12-14},
-    eventtitle = {2023 {{IEEE}}/{{RSJ International Conference}} on {{Intelligent Robots}} and {{Systems}} ({{IROS}})},
-    isbn = {978-1-66549-190-7}
 }
