--- a/LaTeX/Studienarbeit.tex
+++ b/LaTeX/Studienarbeit.tex
@@ -136,7 +136,7 @@
             \end{tabular}
         \end{table}
         Die erhaltenen Werte weisen eine hohe Ähnlichkeit zu den experimentell ermittelten Werten auf, wobei es jedoch leichte Abweichungen beim Methan und Kohlenstoffdioxid gibt. 
-        \subsection{Simulation mit CO$_2$}
+        \subsection{Simulation mit CO \textunderscore 2}
         Analog zur Simulation ohne CO$_2$ werden die Stoffe über die Länge der Nachbrennzone analysiert (siehe Abbildung \ref{fig:vergleich_h2_ch4_co2}).
         \begin{figure}[H]
             \centering
@@ -147,19 +147,22 @@
         Auch hier zeichnet sich ein ähnliches Bild. Die Verläufe sind alle sehr ähnlich und führen zu sehr ähnlichen Abgaszusammensetzungen. In Tabelle sind die berechneten Stoffmengenanteile sowie die experimentell ermittelten Daten dargestellt (wie in Tabelle \ref{tab:vergleich_abgaszusammensetzung_keinco2}).
         \begin{table}[H]
             \centering
+            \label{tab:vergleich_abgaszusammensetzung_co2}
             \caption{Vergleich der Modell- und Experimentalwerte der Molenbrüche mit CO\textsubscript{2}-Zugabe}
             \begin{tabular}{lccccc}
                 \toprule
                 & \textbf{Exp.} & \textbf{GRI} & \textbf{ARAMCO} & \textbf{ATR} & \textbf{NUIG} \\
                 \midrule
-                \textbf{H$_2$} [Vol.-\%]& 0,416 & 0,579 & 0,579 & 0,580 & 0,579 \\
-                \textbf{CO} [Vol.-\%]& 0,424 & 0,373 & 0,373 & 0,373 & 0,373 \\
-                \textbf{CH$_4$} [Vol.-\%]& 0,001 & 0,000 & 0,000 & 0,000 & 0,000 \\
-                \textbf{CO$_2$} [Vol.-\%]& 0,151 & 0,047 & 0,047 & 0,047 & 0,047 \\
+                \textbf{H\textsubscript{2}} [Vol.-\%]   & 0{,}4160 & 0{,}4215 & 0{,}4255 & 0{,}4217 & 0{,}4204 \\
+                \textbf{CO} [Vol.-\%]                  & 0{,}4240 & 0{,}4444 & 0{,}4443 & 0{,}4440 & 0{,}4444 \\
+                \textbf{CH\textsubscript{4}} [Vol.-\%] & 0{,}0012 & 0{,}0047 & 0{,}0022 & 0{,}0049 & 0{,}0048 \\
+                \textbf{CO\textsubscript{2}} [Vol.-\%] & 0{,}1510 & 0{,}1293 & 0{,}1280 & 0{,}1294 & 0{,}1305 \\
                 \bottomrule
             \end{tabular}
         \end{table}
-        Im Vergleich zu den Ergebnissen der Simulation ohne Zugabe von Kohlenstoffdioxid weisen die simulierten Werte eine hohe Abweichung auf. Jedoch ergeben sich für alle Reaktionsmechanismen die gleichen Werte. \alert{Systematischer Fehler!}
+        Auch hier zeigt sich, dass das simulierte Abgas eine hohe Ähnlichkeit mit den experimentellen Daten aufweist
+        \subsection{Wahl des Reaktionsmechanismus} 
+            GriMech
     \pagebreak
     \printbibliography[heading=bibintoc,title=Quellenverzeichnis]
 \end{document}
