--- a/LaTeX/Studienarbeit.tex
+++ b/LaTeX/Studienarbeit.tex
@@ -111,7 +111,7 @@
           \draw[->] (pfr) -- (outlet);
         \label{fig:rom_mechanismusvergleich}
         \end{tikzpicture}
-        \subsection{Simulation ohne CO \textunderscore 2}
+        \subsection{Simulation ohne CO\textsubscript{2}}
         Über die Länge der Nachbrennzone lassen sich die Stoffmengenanteile aufteilen. In Abbildung~\ref{fig:vergleich_h2_ch4_keinco2} sind beispielsweise die Stoffmengenanteile von Wasserstoff und Methan dargestellt.
         \begin{figure}[H]
             \centering
@@ -136,7 +136,7 @@
             \end{tabular}
         \end{table}
         Die erhaltenen Werte weisen eine hohe Ähnlichkeit zu den experimentell ermittelten Werten auf, wobei es jedoch leichte Abweichungen beim Methan und Kohlenstoffdioxid gibt. 
-        \subsection{Simulation mit CO \textunderscore 2}
+        \subsection{Simulation mit CO\textsubscript{2}}
         Analog zur Simulation ohne CO$_2$ werden die Stoffe über die Länge der Nachbrennzone analysiert (siehe Abbildung \ref{fig:vergleich_h2_ch4_co2}).
         \begin{figure}[H]
             \centering
