--- a/LaTeX/refs.bib
+++ b/LaTeX/refs.bib
@@ -1,40 +1,70 @@
 @online{Gri-Mech,
-    author = {Gregory P. Smith and others},
-    title = {Gri-Mech},
-    url = {http://www.me.berkeley.edu/gri_mech/},
-    date = {2025-06-19},
+  author = {Gregory P. Smith and others},
+  title = {Gri-Mech},
+  url = {http://www.me.berkeley.edu/gri_mech/},
+  date = {2025-06-19},
 }
 
 @online{Aramco20,
-    author = {{University of Galway}},
-    title = {AramcoMech 2.0},
-    url = {https://www.universityofgalway.ie/combustionchemistrycentre/mechanismdownloads/aramcomech20/},
-    date = {2025-06-19},
+  author = {{University of Galway}},
+  title = {AramcoMech 2.0},
+  url = {https://www.universityofgalway.ie/combustionchemistrycentre/mechanismdownloads/aramcomech20/},
+  date = {2025-06-19},
 }
 
 @article{MARTINEZ2021401,
-title = {An experimental and kinetic modeling study of the ignition delay characteristics of binary blends of ethane/propane and ethylene/propane in multiple shock tubes and rapid compression machines over a wide range of temperature, pressure, equivalence ratio, and dilution},
-journal = {Combustion and Flame},
-volume = {228},
-pages = {401-414},
-year = {2021},
-issn = {0010-2180},
-doi = {https://doi.org/10.1016/j.combustflame.2021.02.009},
-url = {https://www.sciencedirect.com/science/article/pii/S0010218021000729},
-author = {Sergio Martinez and Mohammadreza Baigmohammadi and Vaibhav Patel and Snehasish Panigrahy and Amrit B. Sahu and Shashank S. Nagaraja and Ajoy Ramalingam and A. Abd El-Sabor Mohamed and Kieran P. Somers and Karl A. Heufer and Andrzej Pekalski and Henry J. Curran},
-keywords = {Ethane, Ethylene, Propane, Shock-tube, Rapid compression machine, Ignition delay time},
-abstract = {In this work, the ignition delay time characteristics of C2 – C3 binary blends of gaseous hydrocarbons including ethylene/propane and ethane/propane are studied over a wide range of temperatures (750 – 2000 K), pressures (1 – 135 bar), equivalence ratios (φ = 0.5 – 2.0) and dilutions (75 – 90%). A matrix of experimental conditions is generated using the Taguchi (L9) approach to cover the range of conditions for the validation of a chemical kinetic model. The experimental ignition delay time data are recorded using low- and high-pressure shock tubes and two rapid compression machines (RCM) to include all of the designed conditions. These novel experiments provide a direct validation of the chemical kinetic model, NUIGMech1.1, and its performance is characterized via statistical analysis, with the agreement between experiments and model being within ~ 26.4% over all of the conditions studied, which is comparable with a general absolute uncertainty of the applied facilities (~ 20%). Sensitivity and flux analyses allow for the key reactions controlling the ignition behavior of the blends to be identified. Subsequent analyses are performed to identify those reactions which are important for the pure fuel components and for the blended fuels, and synergistic/antagonistic blending effects are therefore identified over the wide range of conditions. The overall performance of NUIGMech1.1 and the correlations generated are in good agreement with the experimental data.}
+  title   = {An experimental and kinetic modeling study of the ignition delay characteristics of binary blends of ethane/propane and ethylene/propane in multiple shock tubes and rapid compression machines over a wide range of temperature, pressure, equivalence ratio, and dilution},
+  journal = {Combustion and Flame},
+  volume  = {228},
+  pages   = {401-414},
+  year    = {2021},
+  issn    = {0010-2180},
+  doi     = {10.1016/j.combustflame.2021.02.009},
+  url     = {https://www.sciencedirect.com/science/article/pii/S0010218021000729},
+  author  = {Sergio Martinez and Mohammadreza Baigmohammadi and Vaibhav Patel and Snehasish Panigrahy and Amrit B. Sahu and Shashank S. Nagaraja and Ajoy Ramalingam and A. Abd El-Sabor Mohamed and Kieran P. Somers and Karl A. Heufer and Andrzej Pekalski and Henry J. Curran}
 }
 
 @phdthesis{POX_Erdgas,
-title = "Partial oxidation of methane to synthesis gas : reaction kinetics and reactor modelling",
-author = "{Smet, de}, C.R.H.",
-year = "2000",
-doi = "10.6100/IR535178",
-language = "English",
-isbn = "90-386-2921-4",
-publisher = "Technische Universiteit Eindhoven",
-type = "Phd Thesis 1 (Research TU/e / Graduation TU/e)",
-school = "Chemical Engineering and Chemistry",
+  title     = {Partial oxidation of methane to synthesis gas: reaction kinetics and reactor modelling},
+  author    = {de Smet, C.R.H.},
+  year      = {2000},
+  doi       = {10.6100/IR535178},
+  language  = {English},
+  isbn      = {90-386-2921-4},
+  publisher = {Technische Universiteit Eindhoven},
+  school    = {Chemical Engineering and Chemistry},
+  type      = {Ph.D. thesis}
+}
 
+@Article{en16062916,
+  author  = {Makaryan, Iren A. and Salgansky, Eugene A. and Arutyunov, Vladimir S. and Sedov, Igor V.},
+  title   = {Non-Catalytic Partial Oxidation of Hydrocarbon Gases to Syngas and Hydrogen: A Systematic Review},
+  journal = {Energies},
+  volume  = {16},
+  year    = {2023},
+  number  = {6},
+  article-number = {2916},
+  doi     = {10.3390/en16062916},
+  url     = {https://www.mdpi.com/1996-1073/16/6/2916},
+  issn    = {1996-1073}
+}
+
+@article{LESACHE2022100970,
+  title   = {Analysis of Dry Reforming as direct route for gas phase CO2 conversion. The past, the present and future of catalytic DRM technologies},
+  journal = {Progress in Energy and Combustion Science},
+  volume  = {89},
+  pages   = {100970},
+  year    = {2022},
+  issn    = {0360-1285},
+  doi     = {10.1016/j.pecs.2021.100970},
+  url     = {https://www.sciencedirect.com/science/article/pii/S036012852100068X},
+  author  = {E. le Sach\'e and T.R. Reina}
+}
+
+@book{Emig_Klemm_2017,
+  place     = {Berlin, Heidelberg},
+  title     = {Chemische Reaktionstechnik},
+  publisher = {Springer Vieweg},
+  author    = {Emig, Gerhard and Klemm, Elias},
+  year      = {2017}
 }
