mehrere Simulationen und anpassung Skripte
Hinzufügen OpenSmoke Reaktionsmechanismus
Parameterstudie CO2
Korrektur Plots

--- a/LaTeX/Studienarbeit.tex
+++ b/LaTeX/Studienarbeit.tex
@@ -160,7 +160,13 @@
         \end{table}
         Auch hier zeigt sich, dass das simulierte Abgas eine hohe Ähnlichkeit mit den experimentellen Daten aufweist
         \subsection{Wahl des Reaktionsmechanismus} 
-            GriMech
+             In Abbildung \ref{fig:vergleich_balkendiagramm} sind die experimentell ermittelten Werte mit den durch die verschiedenen Reaktionsmechanismen ermittelten Abgaszusammensetzungen grafisch dargestellt.
+             \begin{figure}[H]
+            \centering
+            \includegraphics[width=0.8\linewidth]{img_py/vergleich_Experimentaldaten_scaled_CH4.png}
+            \caption{Vergleich der experimentell ermittelten Werte mit den durch die verschiedenen Reaktionsmechanismen ermittelten Abgaszusammensetzungen}~\label{fig:vergleich_balkendiagramm}
+        \end{figure}
+        Dabei zeigt sich, dass alle Reaktionsmechanismen eine gute 
     \pagebreak
     \printbibliography[heading=bibintoc,title=Quellenverzeichnis]
 \end{document}
