--- a/Scripts/Auswertungen/Vergleich_ChemistrySet/Tabellen/Tabelle_Vergleich_CO2.tex
+++ b/Scripts/Auswertungen/Vergleich_ChemistrySet/Tabellen/Tabelle_Vergleich_CO2.tex
@@ -1,9 +1,9 @@
-\begin{tabular}{c | c | c | c | c}
+\begin{tabular}{c | c | c | c | c | c}
 \hline
-CO2 Exp & GRI_CO2 & ARAMCO_CO2 & ATR_CO2 & NUIG_CO2 \\ \hline
-0,416 & 0,422 & 0,425 & 0,422 & 0,420 \\
-0,424 & 0,444 & 0,444 & 0,444 & 0,444 \\
-0,001 & 0,005 & 0,002 & 0,005 & 0,005 \\
-0,151 & 0,129 & 0,128 & 0,129 & 0,131 \\
+CO2 Exp & GRI_CO2 & ARAMCO_CO2 & ATR_CO2 & NUIG_CO2 & Smoke_CO2 \\ \hline
+0,416 & 0,422 & 0,425 & 0,422 & 0,420 & 0,429 \\
+0,424 & 0,444 & 0,444 & 0,444 & 0,444 & 0,444 \\
+0,001 & 0,005 & 0,002 & 0,005 & 0,005 & 0,000 \\
+0,151 & 0,129 & 0,128 & 0,129 & 0,131 & 0,127 \\
 \hline
 \end{tabular}
